  (François Pottier, review by Gabriel Scherer and Xavier Leroy.)

- #10090: Distinguished constructors for ref variables at lambda level
  (Keryan Didier, review by Gabriel Scherer and Vincent Laviron)

- #10113: add a `-timeout` option to ocamltest and use it in the test suite.
  (Xavier Leroy and Gabriel Scherer, review by Sébastien Hinderer
   and David Allsopp)

### Build system:

- #9191, #10091, #10182: take the LDFLAGS variable into account, except on
  flexlink-using systems.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   report by Ralph Seichter)

- #10156: configure script: fix sockets feature detection.
  (Lucas Pluvinage, review by David Allsopp and Damien Doligez)

- #10176: By default, call the assembler through the C compiler driver
  (Sébastien Hinderer, review by Gabriel Scherer, David Allsopp and Xavier
  Leroy)

- #10186: configure wasn't using library link flags when searching for
  network functions on systems where they're not in libc. Fix IPv6 and
  socklen_t detection on Windows.
  (Antonin Décimo, review by David Allsopp and Sébastien Hinderer)

### Bug fixes:

* #8857, #10220: Don't clobber GetLastError() in caml_leave_blocking_section
  when the systhreads library is loaded.
  (David Allsopp, report by Anton Bachin, review by Xavier Leroy)

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)

- #10072, #10085: Check that sizes and offsets in stack frame descriptors
  do not overflow the 16-bit fields where they are stored.
  (Xavier Leroy, report by Github user pveber, review by Gabriel Scherer)

- #10087, #10138: In the toplevel REPL, don't use the cache
  of included directories, so that files created or deleted while
  the REPL is running are correctly handled.
  (Xavier Leroy, report by Github user quakerquickoats, review by
   Jeremie Dimino)

- #10147, #10148: Fix building runtime with GCC on macOS.