@@ -220,6 +220,9 @@ Working version
 
 ### Build system:
 
+- #10289: Do not print option documentation in usage messages.
+    (Pavlo Khrystenko, review by Gabriel Scherer)
+
 - #9191, #10091, #10182: take the LDFLAGS variable into account, except on
   flexlink-using systems.
   (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
